--- a/sources/web/php.html
+++ b/sources/web/php.html
@@ -3,67 +3,70 @@
 
 <head>
   <title> Memento </title>
-  <link rel="stylesheet" href="../style/style.css">
-  <link rel="stylesheet" href="../style/prism.css">
-  
+  <link rel="stylesheet" href="../../style/style.css">
+  <link rel="stylesheet" href="../../style/prism.css">
   <meta charset="utf-8">
 </head>
 
 <!-- script de gestion des couleurs de code -->
-<script defer src="../style/prism.js"></script>
-
-<h1> PHP </h1>
-<div id="bandeau">
-
-  <nav>
-    <div class="element"> <a href="html.html">HTML</a> </div>
-    <div class="element"> <a href="css.html">CSS</a> </div>
-    <div class="element"> <a href="javascript.html">JAVASCRIPT</a> </div>
-    <div class="element"> <a href="php.html">PHP</a> </div>
-  </nav>
-</div>
+<script defer src="../../style/prism.js"></script>
 
 <body>
+<header>
 
-<aside>
-  <nav id="chapitres">
-    <a href="">Accueil</a>
-    <a href="web.html">Web</a>
-    <a href="../appli/appli.html">Appli</a>
-  </nav>
-</aside>
+  <div id="header_haut">
+    <img id="imageGauche_header" src="../../images/general/symbole.png" alt="symbole S. Robin" width=10%/>
+    <h1> PHP </h1>
+    <img id="imageDroite_header" src="../../images/web/php.png" alt="php" width=6%/>
+  </div>
+
+  <div id="bandeau">
+    <nav>
+      <div class="element"> <a href="html.html">HTML</a> </div>
+      <div class="element"> <a href="css.html">CSS</a> </div>
+      <div class="element"> <a href="javascript.html">JAVASCRIPT</a> </div>
+      <div class="element"> <a href="php.html">PHP</a> </div>
+    </nav>
+  </div>
+
+</header>
 
 <aside>
   <nav id="table_matieres">
     <a href="#py_generalites">Structure du code</a>
-      <a href="#py_communiquer">Communiquer avec l'utilisateur</a>
-      <a href="#py_variable">Les variables</a>
-      <a href="#py_chaine">Chaînes de caractères</a>
-      <a href="#py_liste">Les listes</a>
-      <a href="#py_tableau">Les tableaux</a>
-      <a href="#py_dictionnaire">Les dictionnaires</a>
-      <a href="#py_condition">Les conditions</a>
-      <a href="#py_boucle">Les boucles</a>
-      <a href="#py_input">Entrées/sorties</a>
-      <a href="#py_fonction">Les fonctions</a>
-      <a href="#py_exception">Gestion des exceptions</a>
-      <a href="#py_objet">Programmation objet</a>
-      <a href="#py_package">Les packages</a>
+    <a href="#py_communiquer">Communiquer avec l'utilisateur</a>
+    <a href="#py_variable">Les variables</a>
+    <a href="#py_chaine">Chaînes de caractères</a>
+    <a href="#py_liste">Les listes</a>
+    <a href="#py_tableau">Les tableaux</a>
+    <a href="#py_dictionnaire">Les dictionnaires</a>
+    <a href="#py_condition">Les conditions</a>
+    <a href="#py_boucle">Les boucles</a>
+    <a href="#py_input">Entrées/sorties</a>
+    <a href="#py_fonction">Les fonctions</a>
+    <a href="#py_exception">Gestion des exceptions</a>
+    <a href="#py_objet">Programmation objet</a>
+    <a href="#py_package">Les packages</a>
     <a href="#py_interface">Interfaces graphiques</a>
-
     <a href="#py_environnement">Environnements de travail</a>
-
-
-      <a href="#py.sub">subprocess et les lignes de commande</a>
+    <a href="#py.sub">subprocess et les lignes de commande</a>
     <a href="#py_django">Le framework Django</a>
-        <a href="#py_pep">Respect du PEP8</a>
-        <a href="">Tester le code</a>
+    <a href="#py_pep">Respect du PEP8</a>
+    <a href="">Tester le code</a>
+  </nav>
+</aside>
+
+<aside>
+  <nav id="chapitres">
+    <a title="accueil du site" href="../index.html"><img class="logo" src="../../images/general/logoAccueil.png" alt="Accueil" /></a>
+    <a title="accueil de la partie Web" href="web.html"><img class="logo" src="../../images/general/logoWeb.png" alt="Web" /></a>
+    <a title="accueil de la partie Appli" href="../appli/appli.html"><img class="logo" src="../../images/general/logoAppli.png" alt="Appli" /></a>
   </nav>
 </aside>
 
 <section id="principal">
 
-  <img src="../images/symbole.png" alt="symbole S. Robin" width=30%>
+
 
 <!-- CONFIGURATION DU SERVEUR -->
 
