--- a/sources/web/web.html
+++ b/sources/web/web.html
@@ -1,32 +1,40 @@
 <!DOCTYPE HTML>
 <html>
+
 <head>
-    <meta charset="UTF-8">
     <title> Memento </title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../../style/style.css">
+    <link rel="stylesheet" href="../../style/prism.css">
+    <meta charset="utf-8">
 </head>
 
 <body>
 
-<!-- Image de présentation-->
 <header>
-    <div class="heroImage">
-        <div class="heroTexte">
-            <h2> Memento </h2>
-        </div>
+
+    <div id="header_haut">
+        <img id="imageGauche_header" src="../../images/general/symbole.png" alt="symbole S. Robin" width=10%/>
+        <h1> LE WEB </h1>
     </div>
+
+    <div id="bandeau">
+        <nav>
+            <div class="element"> <a href="html.html">HTML</a> </div>
+            <div class="element"> <a href="css.html">CSS</a> </div>
+            <div class="element"> <a href="javascript.html">JAVASCRIPT</a> </div>
+            <div class="element"> <a href="php.html">PHP</a> </div>
+        </nav>
+    </div>
+
 </header>
 
-<!-- Bandeau et menu -->
-<div id="bandeau">
-    <div id="titre"> <h1>  </h1> </div>
-    <nav>
-        <div class="element"> <a href="html.html">HTML</a> </div>
-        <div class="element"> <a href="css.html">CSS</a> </div>
-        <div class="element"> <a href="javascript.html">JAVASCRIPT</a> </div>
-        <div class="element"> <a href="php.html">PHP</a> </div>
+<aside>
+    <nav id="chapitres">
+        <a title="accueil du site" href="../index.html"><img class="logo" src="../../images/general/logoAccueil.png" alt="Accueil" /></a>
+        <a title="accueil de la partie Web" href="web.html"><img class="logo" src="../../images/general/logoWeb.png" alt="Web" /></a>
+        <a title="accueil de la partie Appli" href="../appli/appli.html"><img class="logo" src="../../images/general/logoAppli.png" alt="Appli" /></a>
     </nav>
-</div>
+</aside>
 
 <section id="principal">
 
@@ -49,7 +57,7 @@
         </div>
 
         <div class="droite">
-            <img src="images/html.png" width="80" height="80">
+            <img src="../../images/web/html.png" width="80" height="80">
         </div>
     </div>
 
@@ -59,7 +67,7 @@
         </div>
 
         <div class="droite">
-            <a href="css.html"><img src="images/css.png" width="80" height="80"></a>
+            <a href="css.html"><img src="../../images/web/css.png" width="80" height="80"></a>
         </div>
     </div>
 
@@ -70,7 +78,7 @@
         </div>
 
         <div class="droite">
-            <a href="php.html"><img src="images/php.png" width="90" height="80"></a>
+            <a href="php.html"><img src="../../images/web/php.png" width="90" height="80"></a>
         </div>
     </div>
 
@@ -80,7 +88,7 @@
         </div>
 
         <div class="droite">
-            <a href="javascript.html"><img src="images/javascript.png" width="80" height="80"></a>
+            <a href="javascript.html"><img src="../../images/web/javascript.png" width="80" height="80"></a>
         </div>
     </div>
 
@@ -94,7 +102,7 @@
         </div>
 
         <div class="droite">
-            <a href="java.html"><img src="images/java.png" width="60" height="100"></a>
+            <a href="java.html"><img src="../../images/appli/java.png" width="60" height="100"></a>
         </div>
     </div>
 
@@ -104,7 +112,7 @@
         </div>
 
         <div class="droite">
-            <a href="python.html"><img src="images/python.jpg" width="80" height="80"></a>
+            <a href="python.html"><img src="../../images/appli/python.jpg" width="80" height="80"></a>
         </div>
     </div>
 
@@ -114,7 +122,7 @@
         </div>
 
         <div class="droite">
-            <a href="c.html"><img src="images/c.png" width="80" height="80"></a>
+            <a href="c.html"><img src="../../images/appli/c.png" width="80" height="80"></a>
         </div>
     </div>
 
@@ -125,7 +133,7 @@
         </div>
 
         <div class="droite">
-            <a href="git.html"><img src="images/git.png" width="80" height="80"></a>
+            <a href="git.html"><img src="../../images/git.png" width="80" height="80"></a>
         </div>
     </div>
 
@@ -174,7 +182,7 @@
     </ul>
     </p>
 
-    <fieldset><legend><img src="images/bonSavoir.png" width="80" height="80"> </legend>
+    <fieldset><legend><img src="../../images/general/bonSavoir.png" width="80" height="80"> </legend>
         <p> Il existe des bases de données non relationnelles qui n'utilisent pas le langage SQL. Par exemple MongoDB ou Cassandra. </p>
     </fieldset>
 
@@ -191,7 +199,7 @@
     </ul>
     </p>
 
-    <img src="images/architecture3tiers.png" alt="architecture 3 tiers" width="70%">
+    <img src="../../images/web/architecture3tiers.png" alt="architecture 3 tiers" width="70%">
 
 
 
