--- a/sources/web/css.html
+++ b/sources/web/css.html
@@ -3,27 +3,34 @@
 
 <head>
   <title> Memento </title>
-  <link rel="stylesheet" href="../style/style.css">
-  <link rel="stylesheet" href="../style/prism.css">
+  <link rel="stylesheet" href="../../style/style.css">
+  <link rel="stylesheet" href="../../style/prism.css">
   <meta charset="utf-8">
 </head>
 
 <!-- JavaScript de gestion des couleurs de code -->
-<script defer src="../style/prism.js"></script>
+<script defer src="../../style/prism.js"></script>
 
 <body>
-<h1> CSS </h1>
-<div id="bandeau">
 
+<header>
 
+  <div id="header_haut">
+    <img id="imageGauche_header" src="../../images/general/symbole.png" alt="symbole S. Robin" width=10%/>
+    <h1> CSS </h1>
+    <img id="imageDroite_header" src="../../images/web/css.png" alt="css" width=6%/>
+  </div>
 
-  <nav>
-    <div class="element"> <a href="html.html">HTML</a> </div>
-    <div class="element"> <a href="css.html">CSS</a> </div>
-    <div class="element"> <a href="javascript.html">JAVASCRIPT</a> </div>
-    <div class="element"> <a href="php.html">PHP</a> </div>
-  </nav>
-</div>
+  <div id="bandeau">
+    <nav>
+      <div class="element"> <a href="html.html">HTML</a> </div>
+      <div class="element"> <a href="css.html">CSS</a> </div>
+      <div class="element"> <a href="javascript.html">JAVASCRIPT</a> </div>
+      <div class="element"> <a href="php.html">PHP</a> </div>
+    </nav>
+  </div>
+
+</header>
 
 <aside>
   <nav id="table_matieres">
@@ -37,15 +44,13 @@
 
 <aside>
   <nav id="chapitres">
-    <a href="">Accueil</a>
-    <a href="web.html">Web</a>
-    <a href="../appli/appli.html">Appli</a>
+    <a title="accueil du site" href="../index.html"><img class="logo" src="../../images/general/logoAccueil.png" alt="Accueil" /></a>
+    <a title="accueil de la partie Web" href="web.html"><img class="logo" src="../../images/general/logoWeb.png" alt="Web" /></a>
+    <a title="accueil de la partie Appli" href="../appli/appli.html"><img class="logo" src="../../images/general/logoAppli.png" alt="Appli" /></a>
   </nav>
 </aside>
 
 <section id="principal">
-
-  <img src="../images/symbole.png" alt="symbole S. Robin" width=30%>
 
 
   <!-- ===== STRUCTURE D'UNE PAGE CSS ===== -->
@@ -92,7 +97,7 @@
 
   </div>
 
-  <fieldset><legend><img src="../images/bonSavoir.png" width="80" height="80"> </legend>
+  <fieldset><legend><img src="../../images/general/bonSavoir.png" width="80" height="80"> </legend>
     <p> <em>Attention</em>, dans ce cas il est important de ne pas oublier le <strong>.</strong> devant le nom de la classe de la balise.</p>
   </fieldset>
 
@@ -164,7 +169,7 @@ text-align: right;
 text-align: center;
 text-align: justify;</code></pre><footer class="legendeCode">CSS</footer>
 
-    <fieldset><legend><img src="../images/bonSavoir.png" width="80" height="80"> </legend>
+    <fieldset><legend><img src="../../images/general/bonSavoir.png" width="80" height="80"> </legend>
       <p> L'alignement avec l'attribut <strong>text-align</strong> ne fonctionne qu'avec les blocs et non pas les balises <em>inline</em> telles que <strong>&ltspan&gt</strong>, <strong>&lta&gt</strong>, <strong>&ltem&gt</strong>, <strong>&ltstrong&gt</strong>,...</p>
     </fieldset>
 
@@ -350,7 +355,7 @@ ol{
   font-weight: bold;
 }</code></pre><footer class="legendeCode">CSS</footer>
 
-    <fieldset><legend><img src="../images/bonSavoir.png" width="80" height="80"> </legend>
+    <fieldset><legend><img src="../../images/general/bonSavoir.png" width="80" height="80"> </legend>
     <p><em>Attention</em>, dans ce cas il ne faut surtout pas mettre d'espace entre <strong>a</strong> et <strong>hover</strong> sous peine de dysfonctionnement car <strong>hover</strong> n'est pas la valeur d'un attribut.</p>
   </fieldset>
 
@@ -367,7 +372,7 @@ th, td{
     border: 1px solid black;
 }</code></pre><footer class="legendeCode">CSS</footer>
 
-    <fieldset><legend><img src="../images/bonSavoir.png" width="80" height="80"> </legend>
+    <fieldset><legend><img src="../../images/general/bonSavoir.png" width="80" height="80"> </legend>
       <p> Il n'est pas nécessaire de créer des bordures pour la balise <strong>&lttr&gt</strong> car elles ont déjà été faites avec les bordures <strong>&ltth&gt</strong> et <strong>&lttd&gt</strong>.</p>
     </fieldset>
 
