--- a/sources/web/javascript.html
+++ b/sources/web/javascript.html
@@ -1,25 +1,35 @@
 <!DOCTYPE HTML>
 <html>
+
 <head>
   <title> Memento </title>
-  <link rel="stylesheet" href="../style/style.css">
-  <link rel="stylesheet" href="../style/prism.css">
+  <link rel="stylesheet" href="../../style/style.css">
+  <link rel="stylesheet" href="../../style/prism.css">
   <meta charset="utf-8">
 </head>
 
 <!-- JavaScript de gestion des couleurs de code -->
-<script defer src="./style/prism.js"></script>
+<script defer src="../../style/prism.js"></script>
 
 <body>
-<h1> JavaScript </h1>
-<div id="bandeau">
-  <nav>
-    <div class="element"> <a href="html.html">HTML</a> </div>
-    <div class="element"> <a href="css.html">CSS</a> </div>
-    <div class="element"> <a href="javascript.html">JAVASCRIPT</a> </div>
-    <div class="element"> <a href="php.html">PHP</a> </div>
-  </nav>
-</div>
+<header>
+
+  <div id="header_haut">
+    <img id="imageGauche_header" src="../../images/general/symbole.png" alt="symbole S. Robin" width=10%/>
+    <h1> JAVASCRIPT </h1>
+    <img id="imageDroite_header" src="../../images/web/javascript2.png" alt="javascript" width=6%/>
+  </div>
+
+  <div id="bandeau">
+    <nav>
+      <div class="element"> <a href="html.html">HTML</a> </div>
+      <div class="element"> <a href="css.html">CSS</a> </div>
+      <div class="element"> <a href="javascript.html">JAVASCRIPT</a> </div>
+      <div class="element"> <a href="php.html">PHP</a> </div>
+    </nav>
+  </div>
+
+</header>
 
 <aside>
   <nav id="table_matieres">
@@ -42,16 +52,16 @@
 
 <aside>
   <nav id="chapitres">
-    <a href="">Accueil</a>
-    <a href="web.html">Web</a>
-    <a href="../appli/appli.html">Appli</a>
+    <a title="accueil du site" href="../index.html"><img class="logo" src="../../images/general/logoAccueil.png" alt="Accueil" /></a>
+    <a title="accueil de la partie Web" href="web.html"><img class="logo" src="../../images/general/logoWeb.png" alt="Web" /></a>
+    <a title="accueil de la partie Appli" href="../appli/appli.html"><img class="logo" src="../../images/general/logoAppli.png" alt="Appli" /></a>
   </nav>
 </aside>
 
 
 <section id="principal">
 
-  <img src="../images/symbole.png" alt="symbole S. Robin" width=30%>
+
 
 
 
@@ -206,7 +216,7 @@ alert(`Hello world ${nom}`);</code></pre>
 
 
 
-  <fieldset><legend><img src="../images/bonSavoir.png" width="80" height="80"> </legend>
+  <fieldset><legend><img src="../../images/general/bonSavoir.png" width="80" height="80"> </legend>
     <p><em>Attention</em>, la valeur saisie est systématiquement de type <em>String</em>. Il convient donc de la transformer en nombre le cas échéant.</p>
   </fieldset>
 
@@ -360,7 +370,7 @@ alert(`Hello world ${nom}`);</code></pre>
   return valeur;
 }</code></pre>
 
-<fieldset><legend><img src="../images/bonSavoir.png" width="80" height="80"> </legend>
+<fieldset><legend><img src="../../images/general/bonSavoir.png" width="80" height="80"> </legend>
   <p><em>Attention</em>, en JavaScript le type de retour de la fonction et le type des arguments ne sont pas spécifiés lors de la déclaration. Il est donc impossible de surcharger une fonction en JavaScript.</p>
 </fieldset>
 
