--- a/sources/web/css.html
+++ b/sources/web/css.html
@@ -18,7 +18,6 @@
   <div id="header_haut">
     <img id="imageGauche_header" src="../../images/general/symbole.png" alt="symbole S. Robin" width=10%/>
     <h1> CSS </h1>
-    <img id="imageDroite_header" src="../../images/web/css.png" alt="css" width=6%/>
   </div>
 
   <div id="bandeau">
@@ -52,6 +51,15 @@
 
 <section id="principal">
 
+  <div class="bloc">
+    <div class="gauche">
+      <a href="css.html"><img src="../../images/web/css.png" width="80" height="80"></a>
+    </div>
+
+    <div class="droite">
+      <p> CSS signifie Cascading Style Sheets. Ce langage gère l'apparence des pages Web en arrangeant le contenu (couleur, marges, taille du texte). Comme il travaille le contenu d'une page Web, CSS utilise le code HTML pour fonctionner. Sans aucun code CSS, la page Web ressemble à du texte regroupé par bloc et tapé "au kilomètre".</p>
+    </div>
+  </div>
 
   <!-- ===== STRUCTURE D'UNE PAGE CSS ===== -->
 
