--- a/sources/web/html.html
+++ b/sources/web/html.html
@@ -30,7 +30,6 @@ function affichageConditionnel(bouton, id) {
     <div id="header_haut">
         <img id="imageGauche_header" src="../../images/general/symbole.png" alt="symbole S. Robin" width=10%/>
         <h1> HTML </h1>
-        <img id="imageDroite_header" src="../../images/web/html.png" alt="html" width=6%/>
     </div>
 
     <div id="bandeau">
@@ -76,6 +75,17 @@ function affichageConditionnel(bouton, id) {
 
 <section id="principal">
 
+    <div class="bloc">
+        <div class="gauche">
+            <img src="../../images/web/html.png" width="80" height="80">
+        </div>
+
+        <div class="droite">
+            <p>HTML signifie <em>HyperText Markup Language</em>. Il s'agit d'un langage de description permettant d'écrire de l'hypertexte et construit à partir de balises pour représenter les pages Web. Il s'insprire en ce sens du XML.</p>
+        </div>
+    </div>
+
+
 
 
     <!-- ====================
@@ -84,7 +94,7 @@ function affichageConditionnel(bouton, id) {
 
 <h2 id="structure"> Structure d'une page HTML </h2>
 
-    <p> HTML signifie <em>HyperText Markup Language</em>. Ce langage sert à gérer et organiser le contenu des pages Web. C'est donc en HTML qu'on écrit le texte, les liens hypertexte, les images et vidéos. L'information apparaît de manière brute sans mise en forme autre que structurelle.</p>
+    <p> Le langage HTML sert à gérer et organiser le contenu des pages Web. C'est donc en HTML qu'on écrit le texte, les liens hypertexte, les images et vidéos. L'information apparaît de manière brute sans mise en forme autre que structurelle.</p>
 
   <pre><code class="language-html">&lt!DOCTYPE HTML&gt
 &lthtml&gt
