--- a/sources/web/php.html
+++ b/sources/web/php.html
@@ -17,7 +17,6 @@
   <div id="header_haut">
     <img id="imageGauche_header" src="../../images/general/symbole.png" alt="symbole S. Robin" width=10%/>
     <h1> PHP </h1>
-    <img id="imageDroite_header" src="../../images/web/php.png" alt="php" width=6%/>
   </div>
 
   <div id="bandeau">
@@ -66,7 +65,16 @@
 
 <section id="principal">
 
+  <div class="bloc">
+    <div class="gauche">
+      <a href="php.html"><img src="../../images/web/php.png" width="90" height="80"></a>
+    </div>
 
+    <div class="droite">
+      <p>PHP signifie Hypertexte Preprocessor. Il s'agit d'un langage de programmation libre, interprété, orienté objet, principalement utilisé pour produire des pages Web dynamiques via un serveur HTTP.
+        Il est considéré comme une des bases de la création de sites Web dynamiques.</p>
+    </div>
+  </div>
 
 <!-- CONFIGURATION DU SERVEUR -->
 
