--- a/sources/web/javascript.html
+++ b/sources/web/javascript.html
@@ -17,7 +17,6 @@
   <div id="header_haut">
     <img id="imageGauche_header" src="../../images/general/symbole.png" alt="symbole S. Robin" width=10%/>
     <h1> JAVASCRIPT </h1>
-    <img id="imageDroite_header" src="../../images/web/javascript2.png" alt="javascript" width=6%/>
   </div>
 
   <div id="bandeau">
@@ -61,7 +60,15 @@
 
 <section id="principal">
 
+  <div class="bloc">
+    <div class="gauche">
+      <a href="javascript.html"><img src="../../images/web/javascript.png" width="80" height="80"></a>
+    </div>
 
+    <div class="droite">
+      <p>JavaScript est un langage interprété qui se veut simple et dont le but initial était de rendre dynamiques et interactives les pages Web.</p>
+    </div>
+  </div>
 
 
 
