--- a/sources/web/html.html
+++ b/sources/web/html.html
@@ -46,31 +46,33 @@ function affichageConditionnel(bouton, id) {
 <aside>
     <nav id="table_matieres">
         <a href="#structure">Structure d'une page HTML</a>
-        <a href="#hello">Hello world</a>
         <a href="#balise">Les balises</a>
         <a href="#flexbox">Flexbox</a>
         <a href="#lien">Les liens</a>
         <a href="#menu">Les menus</a>
         <a href="#image">Les images</a>
-        <a href="#imageTexte">Image avec un texte centré</a>
         <a href="#video">Les vidéos</a>
         <a href="#formulaire">Les formulaires</a>
-        <a href="#liste">Les listes</a>
         <a href="#tableau">Les tableaux</a>
         <a href="#cachee">Sections cachées</a>
-        <a href="#verification">Validité HTML5 d'un site</a>
-        <a href="#citation">Les citations</a>
         <a href="#responsive">Responsive design</a>
-        <a href="#querie">Media queries</a>
+        <a href="#queries">Media queries</a>
+        <a href="#ecrireCode">Ecrire du code</a>
+        <a href="#miseValeur">Mise valeur</a>
+        <a href="#verification">Validité HTML5 d'un site</a>
     </nav>
 </aside>
 
 <aside>
+
     <nav id="chapitres">
+        <fieldset2>
         <a title="accueil du site" href="../index.html"><img class="logo" src="../../images/general/logoAccueil.png" alt="Accueil" /></a>
         <a title="accueil de la partie Web" href="web.html"><img class="logo" src="../../images/general/logoWeb.png" alt="Web" /></a>
         <a title="accueil de la partie Appli" href="../appli/appli.html"><img class="logo" src="../../images/general/logoAppli.png" alt="Appli" /></a>
+    </fieldset2>
     </nav>
+
 </aside>
 
 <section id="principal">
@@ -123,18 +125,16 @@ function affichageConditionnel(bouton, id) {
   <p>La balise <strong>&ltbody&gt</strong> encadre le corps d'une page Web, qui est généralement structuré en sections, articles indépendants, informations latérales ainsi qu'un menu. Chacune de ces parties est elle-même composée de blocs séparés ou imbriqués qui auront des attributs différents.</p>
   <p>Les commentaires en HTML sont entourés des symboles <strong>&lt!--</strong> et <strong>--&gt</strong>. Cela signifie que ce qui se trouve à l'intérieur de ces symboles ne sera pas interprété. Ces commentaires peuvent être écrits sur une ou plusieurs lignes.</p>
 
-  <fieldset><legend><img src="../../images/general/bonSavoir.png" width="80" height="80"> </legend>
-    <p> Les commentaires sont visibles par tout utilisateur qui fait apparaître le code source HTML de la page qu'il consulte. Il ne faut donc en aucun cas faire apparaître de mot de passe dans les commentaires. </p>
-  </fieldset>
+  <p> Les commentaires sont visibles par tout utilisateur qui fait apparaître le code source HTML de la page qu'il consulte. Il ne faut donc en aucun cas faire apparaître de mot de passe dans les commentaires. </p>
 
-
+    <p>Il ne semble pas y avoir de caractère d'échappement en HTML. Il faut changer les caractères par un équivalent. Par exemple la balise &lt &gt doit s'écrire &amplt et &ampgt . En HTML le caractère & sert dans le code. De ce fait, lorsqu'on veut simplement afficher un &, on doit l'écrire &ampamp. </p>
 
 
     <!-- ======
     HELLO WORLD
     ======= -->
 
-    <h2 id="hello">Hello World</h2>
+    <h3 id="hello">Hello World</h3>
 
   <p>Commençons par le traditionnel "Hello world". Contrairement à beaucoup de langages, HTML n'utilise pas de <strong>;</strong> à la fin des instructions, car celles-ci sont regroupées à l'intérieur de balises.</p>
   <pre><code class="language-html">&lt!DOCTYPE HTML&gt
@@ -155,7 +155,23 @@ LES BALISES
   <p> Les balises permettent de donner des instructions à l'ordinateur, pour différencier langage et texte. Elles sont entourées de chevrons <strong><</strong> et <strong>></strong>. On distingue au niveau de la sémantique les balises en paires qui sont constituées d'une balise ouvrante et d'une balise fermante entourant du texte, et les balises isolées. Par exemple, <strong>&lth1&gt mon titre &lt/h1&gt</strong> est une balise en paires et <strong>&ltbr/&gt</strong> est une balise isolée.</p>
     <p> On peut définir l'affichage spécifique de chacune de ses balises dans un script CSS.</p>
     <p> On distingue également au niveau du comportement les balises de type bloc qui créent automatiquement un retour à la ligne avant et après le bloc, des balises de type <em>inline</em> qui restent à l'intérieur d'un bloc sans créer de retour à la ligne.
-  <p> Les principales balises sont les suivantes :</p>
+
+    <p> Il est important de ne pas croiser les balises. En HTML les erreurs sont d'autant plus difficiles à détecter que le compilateur en autorise énormément avant de bloquer. Il part du principe que ce qu'il ne comprend pas, il ne l'affiche pas, mais n'interrompt pas pour autant l'exécution du code. Par exemple le code suivant est incohérent :</p>
+    <pre><code class="language-html">&lth1&gt mon titre &ltp&gt ici se trouve un paragraphe &lt/h1&gt &lt/p&gt</code></pre>
+
+
+    <!-- Les attributs -->
+
+    <h3> Les attributs </h3>
+
+    <p>Il s'agit des options des balises qui fournissent des informations supplémentaires et peuvent localement décrire comment une partie de la page doit s'afficher. Par exemple, l'attribut <strong>id</strong> sert à donner un nom unique à une balise afin de lui appliquer un traitement particulier.</p>
+    <pre><code class="language-html">&lth2 id="titreSpecial"&gt mon titre &lt/h2&gt</code></pre><footer class="legendeCode">HTML</footer>
+
+    <p>L'attribut <strong>class</strong> fonctionne suivant le même principe, mais place une balise dans une classe particulière.</p>
+    <pre><code class="language-html">&ltpre&gt &ltcode class="language-python"&gt mon code &lt/code&gt &lt/pre&gt</code></pre>
+
+
+    <h3> Principales balises</h3>
   <table>
     <tr> <th> Objectif </th> <th> Balises </th> </tr>
     <tr> <td> section </td> <td> <pre>&ltsection&gt section &lt/section&gt</pre></td> </tr>
@@ -185,26 +201,62 @@ LES BALISES
 
   <p> Notons que par défaut la balise <strong>&ltem&gt</strong> affiche le texte concerné en italique et la balise <strong>&ltstrong&gt</strong> affiche le texte concerné en gras.</p>
 
-    <p> Il est important de ne pas croiser les balises. En HTML les erreurs sont d'autant plus difficiles à détecter que le compilateur en autorise énormément avant de bloquer. Il part du principe que ce qu'il ne comprend pas, il ne l'affiche pas, mais n'interrompt pas pour autant l'exécution du code. Par exemple le code suivant est incohérent :</p>
-    <pre><code class="language-html">&lth1&gt mon titre &ltp&gt ici se trouve un paragraphe &lt/h1&gt &lt/p&gt</code></pre>
-
-
-  <!-- Les attributs -->
-
-  <h3> Les attributs </h3>
-
-    <p>Il s'agit des options des balises qui fournissent des informations supplémentaires et peuvent localement décrire comment une partie de la page doit s'afficher. Par exemple, l'attribut <strong>id</strong> sert à donner un nom unique à une balise afin de lui appliquer un traitement particulier.</p>
-    <pre><code class="language-html">&lth2 id="titreSpecial"&gt mon titre &lt/h2&gt</code></pre><footer class="legendeCode">HTML</footer>
-
-    <p>L'attribut <strong>class</strong> fonctionne suivant le même principe, mais place une balise dans une classe particulière.</p>
-    <pre><code class="language-html">&ltpre&gt &ltcode class="language-python"&gt mon code &lt/code&gt &lt/pre&gt</code></pre>
 
 
 
 
-<!-- =========================
-GESTION DES BLOCS AVEC FLEXBOX
-========================== -->
+    <!-- =====
+   LES LISTES
+   ====== -->
+
+    <h3> Les listes </h3>
+
+    <p> Les listes non ordonnées se définissent grâce aux balises :</P>
+
+    <pre><code class="language-html">&ltul&gt
+  &ltli&gt un élément de la liste &lt/li&gt
+  &ltli&gt un autre élément de la liste &lt/li&gt
+&lt/ul&gt</code></pre><footer class="legendeCode">HTML</footer>
+
+
+    <p>qui affiche le résultat suivant</p>
+    <p>
+    <ul class="ulExemple">
+        <li>un élément de la liste</li>
+        <li>un autre élément de la liste</li>
+    </ul>
+    </p>
+
+    <p>Les listes ordonnées se définissent à l'aide de la balise <strong>&ltol&gt</strong> à la place de la balise <strong>&ltul&gt</strong></p>
+
+
+    <!-- ===== INSERER UNE CITATION ===== -->
+
+    <h3> Insérer une citation </h3>
+
+    <div class="bloc">
+
+        <div class="gauche">
+      <pre><code class="language-html">&ltq&gt "La vérité pour l'homme,
+  c'est ce qui fait de lui un homme."
+  &ltfooter&gt Terre des hommes
+    &ltcite&gt A. de Saint Exupéry &lt/cite&gt
+  &lt/footer&gt
+&lt/q&gt</code></pre><footer class="legendeCode">HTML</footer>
+        </div>
+
+        <div class="droite">
+            <q> La vérité pour l'homme, c'est ce qui fait de lui un homme.
+            </q><footer> Terre des hommes <cite> A. de Saint Exupéry</cite></footer>
+            <footer class="legendeCode">Affichage</footer>
+        </div>
+
+    </div>
+
+
+    <!-- =========================
+    GESTION DES BLOCS AVEC FLEXBOX
+    ========================== -->
 
 <h2 id="flexbox"> Gestion des blocs avec Flexbox </h2>
 
@@ -736,9 +788,8 @@ nom de la page &lt/a&gt</pre></td> </tr>
 
     <p>Le nom de la page apparaît souligné dans le texte et, lorsqu'on clique dessus, on accède à la page dont l'adresse a été enregistrée dans l'attribut <strong>href</strong>.</p>
 
-    <fieldset><legend><img src="../../images/general/bonSavoir.png" width="80" height="80"> </legend>
-      <p>Lorsque vous copiez l'adresse d'une page contenant le caractère <strong>&amp</strong>, il faut remplacer ce dernier par <strong>&ampamp</strong> pour assurer une bonne construction de la page.</p>
-    </fieldset>
+    <p>Lorsque vous copiez l'adresse d'une page contenant le caractère <strong>&amp</strong>, il faut remplacer ce dernier par <strong>&ampamp</strong> pour assurer une bonne construction de la page.</p>
+
 
     <p>  Il existe deux types d'adresse :
       <ul>
@@ -816,7 +867,7 @@ INSERER UNE IMAGE
 INSERER UNE IMAGE TEXTE CENTRE
 ========================== -->
 
-<h2 id="imageTexte"> Insérer une image contenant un texte centré </h2>
+<h3> Insérer une image contenant un texte centré </h3>
 
   <p>Pour créer une image défilante avec du texte centré à l'intérieur, on peut utiliser deux blocs heroImage et heroTexte auquel on attribue la forme suivante dans le fichier style.css associé :</p>
 
@@ -896,9 +947,8 @@ INSERER UNE VIDEO
     <tr><td> height </td> <td> hauteur de la vidéo en pixels </td></tr>
   </table>
 
-  <fieldset><legend><img src="../../images/general/bonSavoir.png" width="80" height="80"> </legend>
-    <p>On ne peut pas forcer le préchargement des vidéos, c'est le navigateur qui décide pour économiser la bande passante.</p>
-  </fieldset>
+  <p>On ne peut pas forcer le préchargement des vidéos, c'est le navigateur qui décide pour économiser la bande passante.</p>
+
 
 
 
@@ -1114,29 +1164,6 @@ INSERER UNE VIDEO
 
 
 
-    <!-- =====
-    LES LISTES
-    ====== -->
-
-    <h2 id="liste"> Les listes </h2>
-
-    <p> Les listes non ordonnées se définissent grâce aux balises :</P>
-
-    <pre><code class="language-html">&ltul&gt
-  &ltli&gt un élément de la liste &lt/li&gt
-  &ltli&gt un autre élément de la liste &lt/li&gt
-&lt/ul&gt</code></pre><footer class="legendeCode">HTML</footer>
-
-
-    <p>qui affiche le résultat suivant</p>
-    <p>
-    <ul class="ulExemple">
-        <li>un élément de la liste</li>
-        <li>un autre élément de la liste</li>
-    </ul>
-    </p>
-
-    <p>Les listes ordonnées se définissent à l'aide de la balise <strong>&ltol&gt</strong> à la place de la balise <strong>&ltul&gt</strong></p>
 
 
 
@@ -1220,44 +1247,7 @@ INSERER UNE VIDEO
     </div>
 
 
-<!-- ======= VERIFIER LA VALIDITE HTML DU SITE ======= -->
 
-<h2 id="verification"> Vérifier la validité HTML5 du site </h2>
-
-  <p> W3C propose sur son <a href="https://validator.w3.org/">site</a> un outil appelé <em>Validator</em> permettant de valider en ligne des codes sources afin de s'assurer qu'ils sont conformes au standard HTML5. Les erreurs de structure ainsi que les bugs les plus classiques sont systématiquement signalés. Notons que contrairement à beaucoup de langages, HTML ne va pas arrêter son exécution si il rencontre une erreur, mais va tout simplement l'ignorer. Si cela est pratique pour pouvoir continuer d'avancer dans la rédaction du programme, cette approche cache les bugs et les rend plus difficiles à détecter.</p>
-  <p> Les erreurs les plus classiques sont les suivantes :
-    <ul>
-      <li>tous les textes doivent se trouver entre des balises <strong> p</strong></li>
-      <li>toutes les images doivent comporter une description avec l'attribut <strong>alt</strong></li>
-      <li>toutes les balises ouvertes doivent être fermées et les balises ne doivent pas s'entrecroiser</li>
-      <li>tous les liens contenant des <strong>&amp</strong> doient être remplacés par des <strong>&ampamp</strong></li>
-    </ul>
-  </p>
-
-
-
-    <!-- ===== INSERER UNE CITATION ===== -->
-
-    <h2 id="citation"> Insérer une citation </h2>
-
-    <div class="bloc">
-
-        <div class="gauche">
-      <pre><code class="language-html">&ltq&gt "La vérité pour l'homme,
-  c'est ce qui fait de lui un homme."
-  &ltfooter&gt Terre des hommes
-    &ltcite&gt A. de Saint Exupéry &lt/cite&gt
-  &lt/footer&gt
-&lt/q&gt</code></pre><footer class="legendeCode">HTML</footer>
-        </div>
-
-        <div class="droite">
-            <q> La vérité pour l'homme, c'est ce qui fait de lui un homme.
-            </q><footer> Terre des hommes <cite> A. de Saint Exupéry</cite></footer>
-            <footer class="legendeCode">Affichage</footer>
-        </div>
-
-    </div>
 
 
     <!-- ===== RESPONSIVE DESIGN ===== -->
@@ -1270,14 +1260,66 @@ INSERER UNE VIDEO
 <h2 id="queries"> Les media queries </h2>
 
 
-<p>Rappel : en HTML les & doivent s'écrire &amp</p>
 
 
-  
-  
+
+    <!-- RAJOUT DE BOITE -->
+
+    <h2 id="miseValeur">Mise en valeur d'un paragraphe par une boite</h2>
+
+    <p>Pour mettre en valeur un texte en utilisant une boîte arrondie avec un effet d'ombre et une image dans le pourtour :</p>
+
+    <pre><code class="language-html">&ltfieldset&gt
+  &ltlegend&gt &ltimg src="chemin_image" width="80" height="80"&gt &lt/legend&gt
+  &ltp&gt Contenu du paragraphe à encadrer. &lt/p&gt
+&lt/fieldset&gt </code> </pre><footer class="legendeCode">HTML</footer>
+
+    <pre><code class="language-css">fieldset{
+  width: 70%;
+  margin: auto;
+  border: 2px rgb(153,102,102) solid;
+  border-radius: 10px;
+  box-shadow: 1px 8px 12px #555;
+  margin-bottom:30px;
+}</code></pre></pre><footer class="legendeCode">CSS</footer>
+
+  <p>On obtient alors le résultat suivant :</p>
+
+    <fieldset><legend><img src="../../images/general/bonSavoir.png" width="80" height="80"> </legend>
+        <p>Contenu du paragraphe à encadrer.</p>
+    </fieldset>
+
+
+    <!-- ECRIRE DU CODE -->
+
+    <h2 id="ecrireCode">Ecrire du code</h2>
+
+
+    <!-- ======= VERIFIER LA VALIDITE HTML DU SITE ======= -->
+
+    <h2 id="verification"> Vérifier la validité HTML5 d'un site </h2>
+
+    <p> W3C propose sur son <a href="https://validator.w3.org/">site</a> un outil appelé <em>Validator</em> permettant de valider en ligne des codes sources afin de s'assurer qu'ils sont conformes au standard HTML5. Les erreurs de structure ainsi que les bugs les plus classiques sont systématiquement signalés. Notons que contrairement à beaucoup de langages, HTML ne va pas arrêter son exécution si il rencontre une erreur, mais va tout simplement l'ignorer. Si cela est pratique pour pouvoir continuer d'avancer dans la rédaction du programme, cette approche cache les bugs et les rend plus difficiles à détecter.</p>
+    <p> Les erreurs les plus classiques sont les suivantes :
+    <ul>
+        <li>tous les textes doivent se trouver entre des balises <strong> p</strong></li>
+        <li>toutes les images doivent comporter une description avec l'attribut <strong>alt</strong></li>
+        <li>toutes les balises ouvertes doivent être fermées et les balises ne doivent pas s'entrecroiser</li>
+        <li>tous les liens contenant des <strong>&amp</strong> doient être remplacés par des <strong>&ampamp</strong></li>
+    </ul>
+    </p>
+
+
+
+
+
 </section>
 
 <footer>
+    <p>Liens utiles</p>
+    <a href="https://www.w3schools.com/">w3school</a>
+    <a href="https://realpython.com/">real python</a>
+    <a href="https://docs.python.org/3/">doc python</a>
     <p>Stephane Robin</p>
 </footer>
 
